# OCR

./: .gitignore  advance_ocr.py  advance_ocr_h2vo.py  ez_ocr.py  paddle_ocr.py  py_tesseract.py  pyproject.toml  requirements.txt  trocr.py
