[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "huggingface-hub[hf-xet]>=0.34.4",
    "paddlepaddle>=3.1.1",
    "peft>=0.17.1",
    "protobuf>=6.32.0",
    "pytesseract>=0.3.13",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers[torch]>=4.56.0",
    "ultralytics>=8.3.192",
]
